--- a/styles/InfoPage.module.scss
+++ b/styles/InfoPage.module.scss
@@ -1,4 +1,3 @@
-
 .info__title{
     margin-top: 30px;
     text-align: center;
@@ -10,7 +9,10 @@
 .info__text{
     margin-top: 10px;
 }
-
+.bold{
+    font-family: var(--font-logo);
+    font-style: italic;
+}
 
 .infoImg{
     display: block;
@@ -27,6 +29,11 @@
     flex-direction: row-reverse;
     gap: 7px;
     margin-top: 10px;
+    font-size: 18px;
+}
+.info__end__container{
+    margin-top: 35px;
+    font-weight: 500;
 }
 
 @media screen and (min-width:768px) {
@@ -39,6 +46,12 @@
     }
     .info__text{
         margin-top: 15px;
+    }
+    .info__end__container{
+        margin-top: 40px;
+    }
+    .info__endWord__container{
+        font-size: 20px;
     }
   
 }
@@ -69,12 +82,12 @@
             margin-bottom: 15px;
     }
    .info__end__container{
-    margin-top: 20px;
+    margin-top: 50px;
    }
    .info__endWord__container{
     justify-content: center;
     gap: 20px;
-
+     
    }
    .infoLogo{
     width: 100px;
@@ -104,12 +117,12 @@
     }
 
     .info__end__container {
-        margin-top: 25px;
+        margin-top: 55px;
     }
 
     .info__endWord__container {
         gap: 25px;
-
+        font-size: 22px;
     }
 
     .infoLogo {
