--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -8,17 +8,22 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 10px;
+    gap: 5px;
     font-size: 12px;
     font-weight: 500;
     transition: border-bottom 250ms cubic-bezier(0.4, 0, 0.2, 1);
     &Link{
        color: #ffffff;
+        padding: 5px;
 
        &:hover, &:focus{
-        border-bottom: 1px solid var(--color-primary-text) ;
+        border-bottom: 0.5px solid var(--color-primary-text) ;
        }
     }
+}
+.currentLocale{
+  border: 1px solid var(--color-primary-text);
+  border-radius: 15px;
 }
 
 .navList{
